--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "nodemon": "^2.0.7"
   }
 }
